--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.4.12", features = ["derive"] }
 ctrlc = "3.4.2"
 fastrand = "2.0.1"
 rustyline = "13.0.0"
