--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.12", features = ["derive"] }
+colored = "2.1.0"
 ctrlc = "3.4.2"
 fastrand = "2.0.1"
 rustyline = "13.0.0"
