--- a/abasic-core/Cargo.toml
+++ b/abasic-core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "abasic_core"
+name = "abasic-core"
 version = "0.1.0"
 edition = "2021"
 authors = ["Atul Varma <varmaa@gmail.com>"]
