--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,10 @@
 
 resolver = "2"
 members = ["abasic-core", "abasic-cli", "abasic-web"]
+
+[profile.release]
+# Tell `rustc` to optimize for small code size.
+#
+# Note that this is mainly for the WASM build, we may want to specify
+# alternatives for CLI.
+opt-level = "s"
