--- a/abasic-web/package.json
+++ b/abasic-web/package.json
@@ -4,14 +4,17 @@
   "description": "Web front-end for the ABASIC interpreter.",
   "scripts": {
     "wasm": "wasm-pack build --target web",
-    "dev": "concurrently --kill-others \"http-server ..\" \"tsc --watch --preserveWatchOutput\""
+    "dev": "concurrently --kill-others \"http-server ..\" \"tsc --watch --preserveWatchOutput\"",
+    "copy-to-dist": "rimraf dist && npx copyfiles index.html img/*.* ts/*.js pkg/*.js pkg/*.wasm dist && npx copyfiles -u 1 ../programs/*.bas dist",
   },
   "author": "Atul Varma <varmaa@gmail.com>",
   "license": "CC0-1.0",
   "dependencies": {
     "concurrently": "^8.2.2",
+    "copyfiles": "^2.4.1",
     "http-server": "^14.1.1",
     "prettier": "3.1.1",
+    "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   }
 }
