--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 
 resolver = "2"
-members = ["abasic-core", "abasic-cli", "abasic-web"]
+members = ["abasic-core", "abasic-cli", "abasic-web", "abasic-lsp"]
+default-members = ["abasic-core", "abasic-cli", "abasic-web"]
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
