--- a/abasic-lsp/package.json
+++ b/abasic-lsp/package.json
@@ -29,19 +29,8 @@
     ],
     "configuration": {
       "type": "object",
-      "title": "Example configuration",
+      "title": "ABASIC configuration",
       "properties": {
-        "abasicLanguageServer.trace.server": {
-          "scope": "window",
-          "type": "string",
-          "enum": [
-            "off",
-            "messages",
-            "verbose"
-          ],
-          "default": "off",
-          "description": "Traces the communication between VS Code and the language server."
-        }
       }
     }
   },
