--- a/abasic-lsp/Cargo.toml
+++ b/abasic-lsp/Cargo.toml
@@ -11,3 +11,4 @@ lsp-types = "0.95.0"
 serde = "1.0.195"
 serde_json = "1.0.111"
 abasic-core = { path = "../abasic-core" }
+clap = { version = "4.4.12", features = ["derive"] }
